# CRONOS

./: .gitignore  app.py  pyproject.toml
docs/: ROADMAP.md
docs/architecture/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DOMAIN_MODEL.md  DOMAIN_RELATIONSHIPS.md  OUTLOOK_WORKFLOW.md  ROADMAP.md  TRINITY_CORE_DOMAIN.md
docs/design/: TRINITY_DESIGN_SYSTEM.md
src/cronos/: main.py
src/cronos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cronos/api/routes/: system.py
src/cronos/static/css/: style.css
src/cronos/templates/: index.html
src/cronos/templates/components/: header.html  sidebar.html  workflow.html
src/cronos/templates/layout/: base.html
